k8s-manifests/namespace-creation.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mzn
---
apiVersion: v1
kind: Namespace
metadata:
  name: sat
---
apiVersion: v1
kind: Namespace
metadata:
  name: maxsat
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq-system
