k8s-manifests/job-handler-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: job-handler
  namespace: default
spec:
  selector:
    matchLabels:
      app: job-handler
  template:
    metadata:
      labels:
        app: job-handler
    spec:
      restartPolicy: Always
      containers:
        - name: job-handler
          image: job-handler:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 5001
