k8s-manifests/ngrok-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ngrok-ingress
  namespace: default
spec:
  ingressClassName: ngrok
  rules:
  - host: ''
    http:
      paths:
      - backend:
          service:
            name: frontend-service
            port:
              number: 80
        path: /
        pathType: Prefix
